--- a/website/www/site/assets/scss/_global.sass
+++ b/website/www/site/assets/scss/_global.sass
@@ -30,7 +30,7 @@ body
 
   &:not(.body--index)
     .body__contained
-      padding: 0 30px
+      //padding: 0 30px
       max-width: 1280px
 
       figure
@@ -66,5 +66,8 @@ body
     width: 100%
 
 .container-main-content
-  padding: 0 20px
+  @media (max-width: $ak-breakpoint-lg)
+    padding: 0 24px
+
+  padding: 0 53px
   position: relative
