--- a/website/www/site/assets/scss/_section-nav.sass
+++ b/website/www/site/assets/scss/_section-nav.sass
@@ -20,7 +20,7 @@
   position: fixed
   width: 100%
   overflow-y: auto
-  background-color: #F7F7F7
+  //background-color: #F7F7F7
 
   nav
     padding: 15px
@@ -36,10 +36,10 @@
         margin-bottom: 0
 
     .section-nav-list
-      padding-left: 16px
-
+      padding: 20px 20px 30px 8px !important;
+      opacity: .24;
     a
-      font-size: 12px
+      font-size: 15px
 
     @media (max-width: $ak-breakpoint-lg)
       background-color: $color-white
@@ -55,6 +55,10 @@
 
     @media (max-width: $ak-breakpoint-lg)
       display: block
+
+  &-list
+    padding: 32px 20px 30px !important
+    opacity: .24
 
   &-list-title
     display: block
@@ -115,5 +119,22 @@
     &.open
       transform: translateX(0)
 
+.section-menu-header
+  font-size: 18px
+  font-weight: bold
+  line-height: normal
+  letter-spacing: 1px
+  margin-bottom: 30px !important
+
+.section-menu-list
+  font-size: 15px
+  line-height: 26px
+  letter-spacing: 0.43px
+  padding-left: 20px
+  &-title
+    @extend .section-menu-list
+    font-weight: bold
+    padding-left: 0px
+  
 
 
