--- a/website/www/site/layouts/community/baseof.html
+++ b/website/www/site/layouts/community/baseof.html
@@ -27,9 +27,9 @@
        </nav>
      </div>
 
-     <nav class="page-nav clearfix" data-offset-top="90" data-offset-bottom="500">
+     <!-- <nav class="page-nav clearfix" data-offset-top="90" data-offset-bottom="500">
        {{ .TableOfContents }}
-     </nav>
+     </nav> -->
 
      <div class="body__contained body__section-nav">
        {{ .Content }}
