--- a/website/www/site/layouts/partials/section-menu/en/community.html
+++ b/website/www/site/layouts/partials/section-menu/en/community.html
@@ -10,24 +10,28 @@
  limitations under the License. See accompanying LICENSE file.
 */}}
 
-<li><span class="section-nav-list-main-title">Community</span></li>
-<li><a href="/community/integrations">Integrations</a></li>
-<li><a href="/community/contact-us">Contact Us</a></li>
-<li><a href="/community/policies">Policies</a></li>
-<li><a href="/community/powered-by">Powered by Apache Beam</a></li>
-<li><a href="/community/youtube-channel">YouTube channel</a></li>
-<li><a href="/community/twitter-handle">Twitter Handle</a></li>
-<li><a href="/community/in-person">In Person</a></li>
-<li>
-  <span class="section-nav-list-title">Promotion</span>
+<li class="section-menu-header"> COMMUNITY</li>
+<li><a href="/community/powered-by">Join Beam Community</a></li>
+<li><a href="/community/integrations">Contact us</a></li>
 
-  <ul class="section-nav-list">
-    <li><a href="/community/presentation-materials/">Presentation materials</a></li>
-    <li><a href="/community/mascot/">Mascot files</a></li>
-    <li><a href="/community/logos/">Logos</a></li>
-  </ul>
-</li>
-<li><a href="https://projects.apache.org/committee.html?beam" target="_blank">Team <img src="/images/external-link-icon.png"
-                                                                                            width="14" height="14"
-                                                                                            alt="External link to Beam roster">
-	</a></li>
+<span class="section-menu-list-title"> Keep Up with Beam</span>
+<ul class="section-menu-list">
+  <li><a href="/community/twitter-handle">Twitter</a></li>
+  <li><a href="/community/youtube-channel">YouTube</a></li>
+</ul>
+
+<span class="section-menu-list-title">Meet up with us!</span>
+<ul class="section-menu-list">
+  <li><a href="/community/presentation-materials/">Find us in your city</a></li>
+  <li><a href="/community/in-person">Current MeetUps</a></li>
+  <li><a href="https://projects.apache.org/committee.html?beam">Team</a></li>
+</ul>
+
+<span class="section-menu-list-title">Promotion</span>
+<ul class="section-menu-list">
+  <li><a href="/community/presentation-materials/">Presentation</a></li>
+  <li><a href="/community/mascot/">Mascot</a></li>
+  <li><a href="/community/logos/">Logo</a></li>
+</ul>
+
+
