--- a/website/www/site/assets/scss/_global.sass
+++ b/website/www/site/assets/scss/_global.sass
@@ -30,9 +30,11 @@ body
 
   &:not(.body--index)
     .body__contained
-      //padding: 0 30px
+      @media (max-width: $ak-breakpoint-lg)
+        padding: 0
+      padding: 0 30px
       max-width: 1280px
-
+      
       figure
         img
           width: 100%
@@ -69,5 +71,6 @@ body
   @media (max-width: $ak-breakpoint-lg)
     padding: 0 24px
 
-  padding: 0 53px
+  padding: 0 22px
   position: relative
+  background-color: #fff
