--- a/website/www/site/assets/scss/_section-nav.sass
+++ b/website/www/site/assets/scss/_section-nav.sass
@@ -20,7 +20,8 @@
   position: fixed
   width: 100%
   overflow-y: auto
-  //background-color: #F7F7F7
+  border-radius: 16px;
+  background-color: #F7F7F7
 
   nav
     padding: 15px
@@ -37,7 +38,6 @@
 
     .section-nav-list
       padding: 20px 20px 30px 8px !important;
-      opacity: .24;
     a
       font-size: 15px
 
@@ -58,7 +58,6 @@
 
   &-list
     padding: 32px 20px 30px !important
-    opacity: .24
 
   &-list-title
     display: block
