--- a/website/www/site/assets/scss/main.scss
+++ b/website/www/site/assets/scss/main.scss
@@ -41,7 +41,8 @@
 @import "_pillars.scss";
 @import "_section-nav.sass";
 @import "_page-nav.sass";
-@import "_table-wrapper.sass";
+@import "_table-wrapper.scss";
 @import "_calendar.scss";
+@import "list-with-icons.scss";
 @import "_quotes.scss";
 @import "navbar-desktop.scss";
