--- a/website/www/site/assets/scss/_list-with-icons.scss
+++ b/website/www/site/assets/scss/_list-with-icons.scss
@@ -15,10 +15,29 @@
  *  limitations under the License.
  */
 
-.table-wrapper
-  > table
-    @extend .table
 
-.table-bordered-wrapper
-  > table
-    @extend .table-bordered
+ .icon-list{
+     margin-top: 64px;
+     max-width: 640px;
+    .list-item{
+        display:flex;
+        margin-bottom: 31px;
+        
+        .list-item-icon{
+            width: 44px;
+            height: 44px;
+            display: block;
+            margin-right: 25px;
+        }
+        .list-item-header{
+            font-size: 22px;
+            font-weight: normal;
+            letter-spacing: normal;
+            line-height: 1.36;
+            @media (max-width: $mobile){
+                font-weight: 500;
+            }
+        }
+ }
+ }
+ 
