--- a/website/www/site/assets/scss/_navbar-mobile.sass
+++ b/website/www/site/assets/scss/_navbar-mobile.sass
@@ -16,16 +16,31 @@
  */
 
 .navbar
-  padding: 15px 0
-
+  padding: 0 !important
+  :before
+    display: none
+  ::after
+    display: none
   .navbar-nav > li > a
     text-transform: uppercase
-
+  .navbar-link
+    font-size: 16px;
+    font-weight: normal;
+    font-stretch: normal;
+    font-style: normal;
+    line-height: normal;
+    letter-spacing: normal
   .navbar-header
-    margin-left: $pad
     float: none
+    display: flex
+    align-items: center
+    justify-content: space-between
+    height: 100%
 
   .navbar-brand
+    padding: 0
+    display: flex
+    align-items: center
     +md
       margin-right: $pad
 
@@ -41,11 +56,12 @@
       color: $color-dark-gray
 
   .navbar-toggle
-    margin-right: 24px
+    margin-right: 16px !important
 
     .icon-bar
       background-color: $color-sun
       height: 3px
+      width: 20px
 
     @media (max-width: $tablet)
       display: block
