--- a/website/www/site/assets/scss/_typography.scss
+++ b/website/www/site/assets/scss/_typography.scss
@@ -133,7 +133,34 @@
   .component-large-header {
     font-size: 24px;
   }
+}
+
+h1{
+  @media (max-width: $tablet){
+    font-size: 32px;
+    line-height: 1.19;
+    font-weight: 500;
+  }
+  font-size: 46px;
+  font-weight: normal;
+  line-height: 1;
+}
+h2{
+  @media (max-width: $tablet){
+    font-size: 24px;
+    line-height: 1.25;
+    font-weight: 500;
+  }
+  font-size: 29px;
+  line-height: 1.24;
+}
+p{
+  font-size: 16px;
+  font-weight: normal;
+  line-height: 1.63;
+  letter-spacing: 0.43px;
+}
   .hero-heading {
     font-size: 32px;
   }
-}
+
