--- a/website/www/site/layouts/partials/header.html
+++ b/website/www/site/layouts/partials/header.html
@@ -11,29 +11,25 @@
 */}}
 
 <nav class="navigation-bar-mobile header navbar navbar-fixed-top">
-    <div class="navbar-header">
-      <a href={{ "/" | relLangURL }} class="navbar-brand" >
-        <img alt="Brand" style="height: 25px" src="/images/beam_logo_navbar.png">
-      </a>
-
-      <button type="button" class="navbar-toggle" aria-expanded="false" aria-controls="navbar">
-        <span class="sr-only">{{ T "nav-toggle-navigation" }}</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-    </div>
+  <div class="navbar-header">
+    <a href={{ "/" | relLangURL }} class="navbar-brand" >
+      <img alt="Brand" style="height: 46px; width: 43px;" src="/images/beam_logo_navbar_mobile.png">
+    </a>
+      <a class="navbar-link" href={{ "/get-started/beam-overview/" | relLangURL }}>{{ T "nav-get-started" }}</a>
+      <a class="navbar-link" href={{ "/documentation/" | relLangURL }}>{{ T "nav-documentation" }}</a>
+    
+    <button type="button" class="navbar-toggle" aria-expanded="false" aria-controls="navbar">
+      <span class="sr-only">{{ T "nav-toggle-navigation" }}</span>
+      <span class="icon-bar"></span>
+      <span class="icon-bar"></span>
+      <span class="icon-bar"></span>
+    </button>
+  </div>
 
     <div class="navbar-mask closed"></div>
 
     <div id="navbar" class="navbar-container closed">
       <ul class="nav navbar-nav">
-        <li>
-          <a href={{ "/get-started/beam-overview/" | relLangURL }}>{{ T "nav-get-started" }}</a>
-        </li>
-        <li>
-          <a href={{ "/documentation/" | relLangURL }}>{{ T "nav-documentation" }}</a>
-        </li>
         <li>
           <a href={{ "/documentation/sdks/java/" | relLangURL }}>{{ T "nav-languages" }}</a>
         </li>
@@ -47,7 +43,7 @@
           <a href={{ "/contribute/" | relLangURL }}>{{ T "nav-contribute" }}</a>
         </li>
         <li>
-          <a href={{ "/community/contact-us/" | relLangURL }}>{{ T "nav-community" }}</a>
+          <a href={{ "/community/" | relLangURL }}>{{ T "nav-community" }}</a>
         </li>
         <li><a href={{ "/blog/" | relLangURL }}>{{ T "nav-blog" }}</a></li>
       </ul>
@@ -115,7 +111,7 @@
       </ul>
     </li>
     <a class="navbar-link" href={{ "/roadmap/" | relLangURL }}>{{ T "nav-roadmap" }}</a>
-    <a class="navbar-link" href={{ "/community/contact-us/" | relLangURL }}>{{ T "nav-community" }}</a>
+    <a class="navbar-link" href={{ "/community/" | relLangURL }}>{{ T "nav-community" }}</a>
     <a class="navbar-link" href={{ "/contribute/" | relLangURL }}>{{ T "nav-contribute" }}</a>
     <a class="navbar-link" href={{ "/blog/" | relLangURL }}>{{ T "nav-blog" }}</a>
   </div>
