--- a/website/www/site/layouts/shortcodes/contributor/row_of_traits.html
+++ b/website/www/site/layouts/shortcodes/contributor/row_of_traits.html
@@ -10,9 +10,9 @@
     limitations under the License. See accompanying LICENSE file.
    */}}
 
-    {{ $data := index $.Site.Data .Site.Language.Lang }}
+    {{ $data := index $.Site.Data .Site.Language.Lang (.Get 0) }}
     <div class="row_of_traits">
-        {{ range $item := $data.committer_traits }}
+        {{ range $item := $data }}
             {{ partial "traits/traits-item" (dict "logo" .icon "text" .body "bolded" .bolded) }}
         {{ end }}
     </div>
